feat: add tag fat jar workflow (#2)